--- a/calc.html
+++ b/calc.html
@@ -18,25 +18,25 @@
             <button class="button" onclick="typing(7)"> 7 </button>
             <button class="button" onclick="typing(8)"> 8 </button>
             <button class="button" onclick="typing(9)"> 9 </button>
-            
-            <button class="button" onclick="removeLast()" style="grid-column: 4/6"> ← </button>
+            <button class="button" onclick="typing('/')"> / </button>
+            <button class="button" onclick="removeLast()"> ← </button>
 
             <button class="button" onclick="typing(4)"> 4 </button>
             <button class="button" onclick="typing(5)"> 5 </button>
             <button class="button" onclick="typing(6)"> 6 </button>
             <button class="button" onclick="typing('*')"> * </button>
-            <button class="button" onclick="typing('/')"> / </button>
+            <button class="button" onclick="typing('√')" disabled> √ </button>
 
             <button class="button" onclick="typing(1)"> 1 </button>
             <button class="button" onclick="typing(2)"> 2 </button>
             <button class="button" onclick="typing(3)"> 3 </button>
-            <button class="button" onclick="typing('+')"> + </button>
             <button class="button" onclick="typing('-')"> - </button>
-            
+            <button class="button" onclick="typing('^')"> ^ </button>
 
             <button class="button" onclick="typing('.')"> . </button>
             <button class="button" onclick="typing(0)"> 0 </button>
-            <button class="button" onclick="res()" style="grid-column: 3/5"> = </button>
+            <button class="button" onclick="res()"> = </button>
+            <button class="button" onclick="typing('+')"> + </button>
             <button class="button" onclick="clearText()"> C </button>
         </div>
     </div>
