--- a/calc.html
+++ b/calc.html
@@ -1,45 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculadora básica</title>
-    <link rel="stylesheet" href="calc.css">
+    <link rel="stylesheet" href="calc.css" />
     <script src="calc.js" defer></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="background">
-        <input type="text" id="display" disabled>
+      <input type="text" id="display" disabled />
 
-        <div id="button-grid">
-            <button class="button" onclick="typing(7)"> 7 </button>
-            <button class="button" onclick="typing(8)"> 8 </button>
-            <button class="button" onclick="typing(9)"> 9 </button>
-            <button class="button" onclick="typing('/')"> / </button>
-            <button class="button" onclick="removeLast()"> ← </button>
+      <div id="button-grid">
+        <button class="button" onclick="typing(7)">7</button>
+        <button class="button" onclick="typing(8)">8</button>
+        <button class="button" onclick="typing(9)">9</button>
+        <button class="button" onclick="typing('/')">/</button>
+        <button class="button" onclick="removeLast()">←</button>
 
-            <button class="button" onclick="typing(4)"> 4 </button>
-            <button class="button" onclick="typing(5)"> 5 </button>
-            <button class="button" onclick="typing(6)"> 6 </button>
-            <button class="button" onclick="typing('*')"> * </button>
-            <button class="button" onclick="typing('√')" disabled> √ </button>
+        <button class="button" onclick="typing(4)">4</button>
+        <button class="button" onclick="typing(5)">5</button>
+        <button class="button" onclick="typing(6)">6</button>
+        <button class="button" onclick="typing('*')">*</button>
+        <button class="button" onclick="typing('√')">√</button>
 
-            <button class="button" onclick="typing(1)"> 1 </button>
-            <button class="button" onclick="typing(2)"> 2 </button>
-            <button class="button" onclick="typing(3)"> 3 </button>
-            <button class="button" onclick="typing('-')"> - </button>
-            <button class="button" onclick="typing('^')"> ^ </button>
+        <button class="button" onclick="typing(1)">1</button>
+        <button class="button" onclick="typing(2)">2</button>
+        <button class="button" onclick="typing(3)">3</button>
+        <button class="button" onclick="typing('-')">-</button>
+        <button class="button" onclick="typing('^')">^</button>
 
-            <button class="button" onclick="typing('.')"> . </button>
-            <button class="button" onclick="typing(0)"> 0 </button>
-            <button class="button" onclick="res()"> = </button>
-            <button class="button" onclick="typing('+')"> + </button>
-            <button class="button" onclick="clearText()"> C </button>
-        </div>
+        <button class="button" onclick="typing('.')">.</button>
+        <button class="button" onclick="typing(0)">0</button>
+        <button class="button" onclick="res()">=</button>
+        <button class="button" onclick="typing('+')">+</button>
+        <button class="button" onclick="clearText()">C</button>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
